--- a/OmarProyectoSymfony/composer.json
+++ b/OmarProyectoSymfony/composer.json
@@ -16,6 +16,7 @@
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/orm-pack": "*",
         "symfony/runtime": "7.2.*",
         "symfony/security-bundle": "7.2.*",
         "symfony/yaml": "7.2.*"
