--- a/OmarProyectoSymfony/.env
+++ b/OmarProyectoSymfony/.env
@@ -16,7 +16,8 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_DEBUG=1  # Activa el modo de depuración
+APP_SECRET=  # Asegúrate de poner un valor aquí también si es necesario
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
